# emperors-interactome

./: .gitignore  AGENTS.md  DATA.md  DECISIONS.md  DEMO.md  HANDOFF.md  LEARNINGS.md  LICENSE  METHODS.md  Makefile  PLAN.md  RATIONALE.md  README.md  SPEC.md  TASKS.md  VERIFY.md  conftest.py  environment.yml  pyproject.toml  requirements.txt  rna_physval.parquet
data/mimicry/: apms_pdockq.json  auditability_boundary.json
data/processed/: D1_confident_hits_corroborated.csv  audit_summary.json  benchmark_synth.json  calibration.json  certified.parquet  corrected_interactome.csv  dependence_robustness.json  experimental_ppi_referee.json  gamma_seed.json  hard_negatives.json  loco_validation.json  mondrian_summary.json  nomination.json  nomination_sets.json  prevalence_shift.json  prospective_register.json  secondmap_audit.json  sensitivity.json  shift_attribution.json  shift_control.json  timesplit_validation.json  validation.json
data/structures/: crossarch_verdict.json  kansl1_msa.csv  (+8 more)
notebooks/: 1.0-demo.ipynb
reports/: DRAFT_mlsb.md  FACTCHECK.md  MANUSCRIPT.md  SELF_IMPROVEMENT_SCORECARD.md  baseline_headtohead_prose.md  higher_scope_scorecard.md  mondrian_prose.md  proposed_named_audit.md  proposition.md  prospective_nominations.md  second_map_auditability.md  shift_robustness_prose.md  summary.md
scripts/: fold_pilot.sh  make_auditability_fig.py  make_crossarch_fig.py  pick_pilot.py  prep_pilot_fasta.py  score_apms.py
tests/: test_conformal.py  test_dependence.py  test_extensions.py  test_firewall.py  test_identifying.py  test_labels.py  test_loco.py
(+47 files in other folders)
